@@ -1,3 +1,13 @@
+2000-06-15  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>
+
+	* lib/Mj/MailOut.pm (handle_bounce): Pull per-user bounce handling
+	out into handle_bounce_user.
+	(handle_bounce_user): New function.
+
+2000-06-14  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>
+
+	* lib/Mj/SubscriberList.pm: Add 'bounce' as a field.
+
 2000-06-14  Jason L Tibbitts III  <tibbs@math.uh.edu>
 
 	* lib/Bf/Parser.pm (parse_postfix): Fix failure ID line.
